Introduce portfolio Add input property binding to circle component

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -316,7 +316,7 @@
 </div>
 
 <div class="content" role="main">
-  <app-circle></app-circle>
+  <app-circle [holdings]="portfolio"></app-circle>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
